--- a/package.json
+++ b/package.json
@@ -12,23 +12,24 @@
 		"husky": "husky install && husky add .husky/pre-commit \" npm run lint\""
 	},
 	"devDependencies": {
+		"@faker-js/faker": "7.3.0",
 		"@sveltejs/adapter-auto": "1.0.0-next.64",
 		"@sveltejs/kit": "1.0.0-next.402",
+		"autoprefixer": "10.4.8",
 		"d3-zoom": "3.0.0",
 		"eslint": "8.21.0",
 		"eslint-config-prettier": "8.5.0",
 		"eslint-plugin-svelte3": "4.0.0",
 		"husky": "8.0.1",
+		"postcss": "8.4.14",
+		"postcss-load-config": "4.0.1",
 		"prettier": "2.7.1",
 		"prettier-plugin-svelte": "2.7.0",
 		"prettier-plugin-tailwindcss": "0.1.13",
 		"svelte": "3.49.0",
-		"vite": "3.0.4",
-		"postcss": "8.4.14",
-		"postcss-load-config": "4.0.1",
 		"svelte-preprocess": "4.10.7",
-		"autoprefixer": "10.4.8",
-		"tailwindcss": "3.1.7"
+		"tailwindcss": "3.1.7",
+		"vite": "3.0.4"
 	},
 	"type": "module"
 }
