--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
 		"@faker-js/faker": "7.3.0",
 		"@sveltejs/adapter-auto": "1.0.0-next.64",
 		"@sveltejs/kit": "1.0.0-next.402",
+		"animated-tailwindcss": "3.3.0",
 		"autoprefixer": "10.4.8",
 		"d3-zoom": "3.0.0",
 		"eslint": "8.21.0",
